--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                                     placeholder="Motivo de su consulta">
                                 </div>
                             <button type="submit" class="btn">Enviar consulta</button>
-                            <input type="hidden" name="_next" value="*****">
+                            <input type="hidden" name="_next" value="https://namaryourpage.com/">
                             <input type="hidden" name="_captcha" value="false">
                             
                             <span class="aclaracion">Los campos marcados con (*) son obligatorios</span>
