--- a/capacitateconnosotros.html
+++ b/capacitateconnosotros.html
@@ -21,36 +21,33 @@
 <body>
 
 
-
-    <nav class="menu">
-        <section class="menu__container">
-            <h1 class="menu__logo">Your Page</h1>
-
-            <ul class="menu__links">
-                <li class="menu__item">
-                    <a href="index.html" class="menu__link">Quienes Somos</a>
+    <header class="header">
+        <nav class="nav">
+            <h1  class="logo nav-link">Your Page</h1>
+            <button class="nav-toggle" aria-label="Abrir menú">
+                <i class="fas fa-bars"></i>
+            </button>
+            <ul class="nav-menu">
+                <li class="nav-menu-item">
+                    <a href="index.html" class="nav-menu-link nav-link">Quienes Somos</a>
                 </li>
 
-                <li class="menu__item">
-                    <a href="precios.html" class="menu__link">Precios</a>
+                <li class="nav-menu-item">
+                    <a href="precios.html" class="nav-menu-link nav-link">Precios</a>
                 </li>
 
-                <li class="menu__item">
+                <li class="nav-menu-item">
                     <a href="capacitateconnosotros.html" class="menu__link">Capacitate con Nosotros</a>
                 </li>
             </ul>
 
-            <div class="menu__hamburguer">
-                <img src="assets/menu.svg" class="menu__img">
-            </div>
-
             <div class="col-auto order-2 order-md-3 navwsp">
                 <a class="whatsapp" href="https://wa.me/5491149707914" target="_blank">whatsapp</a>
             </div>
-        </section>
+        </nav>
 
-
-    </nav>
+    </header>
+    
 
     <section id="presencia">
         <div class="container-seb">
