--- a/index.html
+++ b/index.html
@@ -26,31 +26,36 @@
         <div class="header_superior">
             <div class="logo">
                 <h1>Your Page</h1>
-                <div class="search">
-                    <a class="whatsapp" href="https://wa.me/5491149707914" target="_blank">whatsapp</a>
-                </div>
             </div>
+            <div class="search">
+                <a class="whatsapp" href="https://wa.me/5491149707914" target="_blank">whatsapp</a>
+            </div>
+
         </div>
 
         <div class="container__menu">
-            <nav>
+            <div class="menu">
+                <input type="checkbox" id="check__menu">
+                <label id="#label__check" for="check__menu">
+                    <i class="fa-solid fa-bars icon__menu"></i>
+                </label>
+                <nav>
+                    <ul>
+                        <li>
+                            <a href="index.html" id="selected"></a>
+                        </li>
 
-                <ul class="nav-menu">
-                    <li class="nav-menu-item">
-                        <a href="index.html" class="menu__link">Quienes Somos</a>
-                    </li>
+                        <li>
+                            <a href="precios.html">Precios</a>
+                        </li>
 
-                    <li class="nav-menu-item">
-                        <a href="precios.html" class="menu__link">Precios</a>
-                    </li>
-
-                    <li class="nav-menu-item">
-                        <a href="capacitateconnosotros.html" class="menu__link">Capacitate con Nosotros</a>
-                    </li>
-                </ul>
-            </nav>
+                        <li>
+                            <a href="capacitateconnosotros.html">Capacitate con Nosotros</a>
+                        </li>
+                    </ul>
+                </nav>
+            </div>
         </div>
-
 
     </header>
 
