--- a/precios.html
+++ b/precios.html
@@ -453,39 +453,6 @@
         </div>
     </section>
 
-    <section>
-        <div class="align-items-center h-100">
-            <div class="container-seb" style="overflow: hidden;">
-                <div class="slider">
-                    <div class="logos">
-                        <i class="fab fa-4x"><img src="media/1.png"></i>
-                        <i class="fab fa-4x"><img src="media/7.png"></i>
-                        <i class="fab fa-4x"><img src="media/9.png"></i>
-                        <i class="fab fa-4x"><img src="media/5.png"></i>
-                        <i class="fab fa-4x"><img src="media/8.png"></i>
-                        <i class="fab fa-4x"><img src="media/6.png"></i>
-                        <i class="fab fa-4x"><img src="media/10.png"></i>
-                        <i class="fab fa-4x"><img src="media/3.png"></i>
-                        <i class="fab fa-4x"><img src="media/4.png"></i>
-                        <i class="fab fa-4x"><img src="media/2.png"></i>
-                    </div>
-                    <div class="logos">
-                        <i class="fab fa-4x"><img src="media/1.png"></i>
-                        <i class="fab fa-4x"><img src="media/7.png"></i>
-                        <i class="fab fa-4x"><img src="media/9.png"></i>
-                        <i class="fab fa-4x"><img src="media/5.png"></i>
-                        <i class="fab fa-4x"><img src="media/8.png"></i>
-                        <i class="fab fa-4x"><img src="media/6.png"></i>
-                        <i class="fab fa-4x"><img src="media/10.png"></i>
-                        <i class="fab fa-4x"><img src="media/3.png"></i>
-                        <i class="fab fa-4x"><img src="media/4.png"></i>
-                        <i class="fab fa-4x"><img src="media/2.png"></i>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
-
     <section id="reunion">
         <div class="container-seb">
 
@@ -500,6 +467,36 @@
         </div>
     </section>
 
+    <div class="align-items-center h-100">
+        <div class="container-seb" style="overflow: hidden;">
+            <div class="slider">
+                <div class="logos">
+                    <i class="fa-4x"><img src="media/1.png"></i>
+                    <i class="fa-4x"><img src="media/7.png"></i>
+                    <i class=" fa-4x"><img src="media/9.png"></i>
+                    <i class=" fa-4x"><img src="media/5.png"></i>
+                    <i class=" fa-4x"><img src="media/8.png"></i>
+                    <i class=" fa-4x"><img src="media/6.png"></i>
+                    <i class=" fa-4x"><img src="media/10.png"></i>
+                    <i class=" fa-4x"><img src="media/3.png"></i>
+                    <i class=" fa-4x"><img src="media/4.png"></i>
+                    <i class=" fa-4x"><img src="media/2.png"></i>
+                </div>
+                <div class="logos">
+                    <i class="fab fa-4x"><img src="media/1.png"></i>
+                    <i class="fab fa-4x"><img src="media/7.png"></i>
+                    <i class="fab fa-4x"><img src="media/9.png"></i>
+                    <i class="fab fa-4x"><img src="media/5.png"></i>
+                    <i class="fab fa-4x"><img src="media/8.png"></i>
+                    <i class="fab fa-4x"><img src="media/6.png"></i>
+                    <i class="fab fa-4x"><img src="media/10.png"></i>
+                    <i class="fab fa-4x"><img src="media/3.png"></i>
+                    <i class="fab fa-4x"><img src="media/4.png"></i>
+                    <i class="fab fa-4x"><img src="media/2.png"></i>
+                </div>
+            </div>
+        </div>
+    </div> 
     
         <section id="footer">
             <div class="container-seb">
