--- a/capacitateconnosotros.html
+++ b/capacitateconnosotros.html
@@ -138,52 +138,53 @@
     <br>
     <br>
     <br>
+    <section id="logos">
 
-    <section id="reunion">
-        <div class="container-seb">
+        <section id="reunion">
+            <div class="container-seb">
 
-            <h1>Póngase en contacto</h1>
-            <p>Reciba un asesoramiento totalmente gratuito y personalizado en base a sus necesidades. Haga
-                clic en el siguiente botón para agendar un asesoramiento telefónico o videollamada.</p>
+                <h1>Póngase en contacto</h1>
+                <p>Reciba un asesoramiento totalmente gratuito y personalizado en base a sus necesidades. Haga
+                    clic en el siguiente botón para agendar un asesoramiento telefónico o videollamada.</p>
 
-            <div class="col-auto order-2 order-md-3 navwsp">
-                <a class="whatsapp" href="https://wa.me/5491149707914" target="_blank">Consultanos!</a>
-            </div>
-
-        </div>
-    </section>
-
-    <div class="align-items-center h-100">
-        <div class="container-seb" style="overflow: hidden;">
-            <div class="slider">
-                <div class="logos">
-                    <i class="fa-4x"><img src="media/1.png"></i>
-                    <i class="fa-4x"><img src="media/7.png"></i>
-                    <i class=" fa-4x"><img src="media/9.png"></i>
-                    <i class=" fa-4x"><img src="media/5.png"></i>
-                    <i class=" fa-4x"><img src="media/8.png"></i>
-                    <i class=" fa-4x"><img src="media/6.png"></i>
-                    <i class=" fa-4x"><img src="media/10.png"></i>
-                    <i class=" fa-4x"><img src="media/3.png"></i>
-                    <i class=" fa-4x"><img src="media/4.png"></i>
-                    <i class=" fa-4x"><img src="media/2.png"></i>
+                <div class="col-auto order-2 order-md-3 navwsp">
+                    <a class="whatsapp" href="https://wa.me/5491149707914" target="_blank">Consultanos!</a>
                 </div>
-                <div class="logos">
-                    <i class="fab fa-4x"><img src="media/1.png"></i>
-                    <i class="fab fa-4x"><img src="media/7.png"></i>
-                    <i class="fab fa-4x"><img src="media/9.png"></i>
-                    <i class="fab fa-4x"><img src="media/5.png"></i>
-                    <i class="fab fa-4x"><img src="media/8.png"></i>
-                    <i class="fab fa-4x"><img src="media/6.png"></i>
-                    <i class="fab fa-4x"><img src="media/10.png"></i>
-                    <i class="fab fa-4x"><img src="media/3.png"></i>
-                    <i class="fab fa-4x"><img src="media/4.png"></i>
-                    <i class="fab fa-4x"><img src="media/2.png"></i>
+
+            </div>
+        </section>
+
+        <div class="align-items-center h-100">
+            <div class="container-seb" style="overflow: hidden;">
+                <div class="slider">
+                    <div class="logos">
+                        <i class="fa-4x"><img src="media/1.png"></i>
+                        <i class="fa-4x"><img src="media/7.png"></i>
+                        <i class=" fa-4x"><img src="media/9.png"></i>
+                        <i class=" fa-4x"><img src="media/5.png"></i>
+                        <i class=" fa-4x"><img src="media/8.png"></i>
+                        <i class=" fa-4x"><img src="media/6.png"></i>
+                        <i class=" fa-4x"><img src="media/10.png"></i>
+                        <i class=" fa-4x"><img src="media/3.png"></i>
+                        <i class=" fa-4x"><img src="media/4.png"></i>
+                        <i class=" fa-4x"><img src="media/2.png"></i>
+                    </div>
+                    <div class="logos">
+                        <i class="fab fa-4x"><img src="media/1.png"></i>
+                        <i class="fab fa-4x"><img src="media/7.png"></i>
+                        <i class="fab fa-4x"><img src="media/9.png"></i>
+                        <i class="fab fa-4x"><img src="media/5.png"></i>
+                        <i class="fab fa-4x"><img src="media/8.png"></i>
+                        <i class="fab fa-4x"><img src="media/6.png"></i>
+                        <i class="fab fa-4x"><img src="media/10.png"></i>
+                        <i class="fab fa-4x"><img src="media/3.png"></i>
+                        <i class="fab fa-4x"><img src="media/4.png"></i>
+                        <i class="fab fa-4x"><img src="media/2.png"></i>
+                    </div>
                 </div>
             </div>
         </div>
-    </div> 
-    
+
         <section id="footer">
             <div class="container-seb">
                 <div class="row align-items-center">
@@ -192,24 +193,7 @@
                     </div>
                     <div class="col-xs-12 col-md-8 footpath"><span class="footn mkt"> © 2023 YourPage </span>
                         <div class="minimenu">
-                            <!-- <a href="index.html">Quienes somos</a>
-                        <a href="portfolio.html">Portfolio</a>
-                        <a href="precios.html">Precios</a>
-                        <a href="contacto.html">Contacto</a>
 
-                    --> <!-- <br>
-                        <a href="diseno.html">Diseño web</a>
-                        <a href="landing.html">Landing page</a>
-                        <a href="corporativa.html">Web corporativa</a>
-                        <a href="tienda-online.html">Tienda online</a>
-                        <a href="martketing.html">Marketing online</a>
-                        <a href="googleads.html">Google Ads</a>
-                        <a href="facebookads.html">Facebook Ads</a>
-                        <a href="instagramads.html">Instagram Ads</a>
-                        <a href="fanpages.html">Fanpages de Facebook</a>
-                        <a href="perfil.html">Perfil comercial de Instagram</a>
-                        <a href="posteos.html">Posteos en redes sociales</a>
-                        <a href="redes.html">Otros servicios</a> -->
                         </div>
                     </div>
                     <div class="col-xs-12 col-md-2 rexads">
@@ -223,11 +207,12 @@
                 </div>
             </div>
         </section>
+
     </section>
 
     <script src="js/bootstrap.min.js"></script>
     <script src="js/jquery.js"></script>
-    <script src="js/jquery.min.js"></script> 
+    <script src="js/jquery.min.js"></script>
     <script src="js/nana.js"></script>
     <script src="js/popper.min.js"></script>
     <script src="js/script.js"></script>
