--- a/capacitateconnosotros.html
+++ b/capacitateconnosotros.html
@@ -100,37 +100,17 @@
 
         <h2 class="title2"> Nuestros Cursos </h2>
 
-        <div class="contenedor__slider">
-            <div class="contenedor">
-
-                <input type="radio" name="slider" id="item-1" checked>
-                <input type="radio" name="slider" id="item-2">
-                <input type="radio" name="slider" id="item-3">
-
-                <div class="cards">
-                    <label class="card2" for="item-1" id="selector-1">
+        <div>
                         <a href="https://go.hotmart.com/B82000010I?ap=6c54"> <img class="img"
                                 src="img/videosincreibles.png">
                         </a>
-                    </label>
-
-                    <label class="card2" for="item-2" id="selector-2">
                         <a href="https://go.hotmart.com/A82000024C?ap=5cdb"> <img class="img"
                                 src="img/ilustratorparaemprendedores.png">
                         </a>
-                    </label>
-
-                    <label class="card2" for="item-3" id="selector-3">
                         <a href="https://go.hotmart.com/G82000029H?ap=03cd"> <img class="img"
                                 src="img/relspasoapaso.png">
                         </a>
-                    </label>
-
-
-                </div>
-
             </div>
-        </div>
 
 
     </section>
