--- a/index.html
+++ b/index.html
@@ -219,11 +219,10 @@
                     </div>
                     <div class="col-xs-12 col-md-2 rexads">
                         <a href="tel:541149707914"><img src="publicidad/m1.png" class="linkbt"></a>
-                        <a target="_blank" href="***"><img src="publicidad/m2.png" class="linkbt"></a><br>
                         <a href="mailto:amaropaez@gmail.com"><img src="publicidad/m3.png" class="linkbt"></a>
-                        <a href="****" target="_blank"><img src="publicidad/m5.png" class="linkbt"></a><br>
-                        <a href="*****" target="_blank"><img src="publicidad/m4.png" class="linkbt"></a>
-                        <a href="*****" target="_blank"><img src="publicidad/m6.png" class="linkbt"></a>
+                        
+                        <a href="https://www.instagram.com/nadiabelenamaro/" target="_blank"><img src="publicidad/m4.png" class="linkbt"></a>
+                        
                     </div>
                 </div>
             </div>
